# 20251018_signtestbyCodex

./: .gitignore  AGENTS.md  README.md  note.md  pyproject.toml
docs/: plan_stage0.md  plan_stage1.md  plan_stage2.md  plan_stage3.md  plan_stage4.md  plan_stage5.md
experiments/: plot_sign_vs_U.py  plot_sign_vs_beta_L.py  run_auxiliary_plan.py  run_average_sign.py  run_sign_vs_U.py  run_sign_vs_beta_L.py
experiments/analysis/sign_vs_U_checkerboard/: complex_data.json  real_data.json  summary.csv  summary.json
experiments/analysis/sign_vs_U_checkerboard_high/: complex_data.json  real_data.json  summary.csv  summary.json
experiments/config_samples/: quick_config.json
experiments/output_checkerboard_complex/: average_sign_vs_U.json
experiments/output_checkerboard_complex/logs_u/: 000_L4_beta4.0_U0.0.jsonl  001_L4_beta4.0_U1.0.jsonl  002_L4_beta4.0_U2.0.jsonl  003_L4_beta4.0_U5.0.jsonl  004_L4_beta4.0_U10.0.jsonl  005_L4_beta4.0_U15.0.jsonl  006_L4_beta4.0_U20.0.jsonl  007_L4_beta4.0_U25.0.jsonl  008_L4_beta4.0_U30.0.jsonl  009_L6_beta6.0_U0.0.jsonl  010_L6_beta6.0_U1.0.jsonl  011_L6_beta6.0_U2.0.jsonl  (+24 more)
experiments/output_checkerboard_complex_highsweep/: average_sign_vs_U.json
src/worldline_qmc/: __init__.py  auxiliary.py  cli.py  config.py  lattice.py  measurement.py  rng.py  simulation.py  transitions.py  updates.py  worldline.py
tests/: __init__.py  conftest.py  test_auxiliary.py  test_cli.py  test_config.py  test_experiments.py  test_measurement.py  test_placeholder.py  test_simulation.py  test_transitions.py  test_updates.py  test_worldline.py
(+122 files in other folders)
